--- a/assets/Scss/layout/_black-backdrop.scss
+++ b/assets/Scss/layout/_black-backdrop.scss
@@ -1,6 +1,7 @@
 .black-backdrop {
-    @include position-absolute(0);
     @include hidden(hidden, 0);
+    @include position(absolute, null, 0, 0, null);
+    transform: translate(0);
     width: $width-size_1;
     height: $height-size_3;
     backdrop-filter: blur(5px);
