--- a/assets/Scss/layout/_categories-wrapper.scss
+++ b/assets/Scss/layout/_categories-wrapper.scss
@@ -1,13 +1,15 @@
 .categories-wrapper {
     margin-top: 1rem;
     height: calc(100% - 8rem);
-    padding: 0 30px;
-    padding-bottom: 20px;
+    padding: 0 30px 20px 30px;
     overflow: scroll;
+    @include mobile{
+        padding: 0 30px 40px 30px;
+    }
 
     .categories {
         padding-top: 1rem;
-        @include flex-direction(space-between, initial, flex-direction, column);
+        @include flex-direction(space-between, initial, column);
         gap: 1rem;
     }
 }
