--- a/assets/Scss/layout/_category-card.scss
+++ b/assets/Scss/layout/_category-card.scss
@@ -14,6 +14,10 @@
         .content {
             h1 {
                 font-size: 1.5rem;
+
+                @include mobile {
+                    font-size: 1.2rem;
+                }
             }
 
             p {
@@ -25,6 +29,10 @@
 
         .category-img {
             width: $width-size_2 - 2;
+
+            @include mobile {
+                width: 1.6rem
+            }
         }
     }
 
