--- a/assets/StyleSheet/main.css
+++ b/assets/StyleSheet/main.css
@@ -52,28 +52,34 @@ body {
   justify-content: center;
 }
 
-.wrapper {
+.app-main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+@media only screen and (max-width: 390px) {
+  .app-main {
+    width: 92%;
+  }
+}
+.app-main .wrapper {
   position: relative;
   display: flex;
   overflow: hidden;
-  height: 100vh;
-  width: 100%;
   padding: 30px 0;
   margin: 20px 0;
+  border: 7px solid #2e2e2e;
+  max-width: 23rem;
+  width: 100%;
+  height: 43rem;
+  border-radius: 35px;
 }
-@media only screen and (min-width: 567px) {
-  .wrapper {
-    height: 41rem;
-    width: 24rem;
-    border-radius: 35px;
-    border: 8px solid #2e2e2e;
-  }
-}
-.wrapper.show-category .home-screen,
-.wrapper.show-category .category-screen {
+.app-main .wrapper.show-category .home-screen,
+.app-main .wrapper.show-category .category-screen {
   transform: translateX(-100%);
 }
-.wrapper.show-category .backdrop-screen {
+.app-main .wrapper.show-category .backdrop-screen {
   transform: translate(-50%, -60%);
 }
 
@@ -145,16 +151,31 @@ body {
 .screen .head-wrapper .content-head {
   font-size: 1.5rem;
 }
+@media only screen and (max-width: 286px) {
+  .screen .head-wrapper .content-head {
+    font-size: 1.2rem;
+  }
+}
 .screen .head-wrapper .content-text {
   font-weight: 500;
   line-height: 20px;
   margin-top: 5px;
+}
+@media only screen and (max-width: 286px) {
+  .screen .head-wrapper .content-text {
+    width: 90%;
+  }
 }
 .screen .head-wrapper .user-img {
   position: relative;
 }
 .screen .head-wrapper .user-img img {
   width: 5rem;
+}
+@media only screen and (max-width: 286px) {
+  .screen .head-wrapper .user-img img {
+    width: 4rem;
+  }
 }
 .screen .head-wrapper .user-img .backdrop {
   position: absolute;
@@ -166,6 +187,12 @@ body {
   border-radius: 50%;
   background-color: #fff;
   z-index: -1;
+}
+@media only screen and (max-width: 286px) {
+  .screen .head-wrapper .user-img .backdrop {
+    width: 3rem;
+    height: 3rem;
+  }
 }
 
 .category-screen .head-top {
@@ -222,6 +249,11 @@ body {
 .category .left .content h1 {
   font-size: 1.5rem;
 }
+@media only screen and (max-width: 286px) {
+  .category .left .content h1 {
+    font-size: 1.2rem;
+  }
+}
 .category .left .content p {
   color: #2e2e2e;
   font-size: 0.8rem;
@@ -229,6 +261,11 @@ body {
 }
 .category .left .category-img {
   width: 3rem;
+}
+@media only screen and (max-width: 286px) {
+  .category .left .category-img {
+    width: 1.6rem;
+  }
 }
 .category .options {
   opacity: 0;
@@ -252,9 +289,13 @@ body {
 .categories-wrapper {
   margin-top: 1rem;
   height: calc(100% - 8rem);
-  padding: 0 30px;
-  padding-bottom: 20px;
+  padding: 0 30px 20px 30px;
   overflow: scroll;
+}
+@media only screen and (max-width: 286px) {
+  .categories-wrapper {
+    padding: 0 30px 40px 30px;
+  }
 }
 .categories-wrapper .categories {
   padding-top: 1rem;
@@ -280,12 +321,12 @@ body {
 }
 
 .black-backdrop {
+  opacity: 0;
+  visibility: hidden;
   position: absolute;
   top: 0;
   left: 0;
   transform: translate(0);
-  opacity: 0;
-  visibility: hidden;
   width: 100%;
   height: 100%;
   -webkit-backdrop-filter: blur(5px);
@@ -361,8 +402,8 @@ body {
 }
 .tasks-wrapper .completed-tasks {
   position: absolute;
-  left: 35px;
   bottom: 55px;
+  left: 35px;
 }
 
 .btns {
@@ -408,10 +449,10 @@ body {
 
 .add-task-btn {
   position: absolute;
-  width: 3rem;
-  height: 3rem;
   bottom: 1rem;
   right: 1rem;
+  width: 3rem;
+  height: 3rem;
   border-radius: 50%;
   background-color: #b92b27;
   cursor: pointer;
