--- a/assets/Scss/components/_buttons.scss
+++ b/assets/Scss/components/_buttons.scss
@@ -2,6 +2,10 @@
     @include flex-box(center, flex-end);
     gap: 1rem;
 
+    @include mobile {
+        justify-content: center;
+    }
+
     button {
         padding: 10px 20px;
         border-radius: 5px;
@@ -33,11 +37,16 @@
     @include hidden(hidden, 0);
     transition: all 0.3s;
 
+    @include mobile {
+        margin-left: 20px;
+    }
+
     &:hover {
         color: $color_3;
         background-color: $background-color_2;
     }
 }
+
 .add-task-btn {
     position: absolute;
     bottom: 1rem;
